# coup

./: .gitignore  Cargo.toml  README.md  bin.js  constants.js  helper.js  index.js  package.json  rustfmt.toml  test.js
.github/workflows/: testing.yml
bots/exampleBot1/: index.js
exampleBot1/: index.js
src/: bot.rs  constants.js  index.js  lib.rs  main.rs  static_bot.rs
src/bots/: honest_bot.rs  mod.rs  random_bot.rs  static_bot.rs
test/: test.js
